Fix/income/response (#31)
* 📝 Update readme

* feat: Repository 레벨 캐싱 및 QueryDSL 동적 쿼리 개선

- Category Entity를 Repository 레벨에서 캐싱하여 유연성 향상
- CategoryService self-injection 제거 및 간소화
- CategoryResponse에 toCategoryInfo() 메서드 추가
- IncomeService에서 카테고리 정보 포함하여 응답
- IncomeRepositoryImpl에 QueryDSL 동적 쿼리 적용
- ExpenseRepositoryImpl에 QueryDSL 동적 쿼리 적용
- BooleanExpression으로 동적 조건 처리 (null 자동 무시)
- Service 계층 if-else 분기 제거로 코드 간소화
- 타입 안전성 향상 (String → CustomUuid)
- IncomeServiceIntegrationTest 추가 (13개 테스트)

Benefits:
- 타입 안전한 쿼리 (컴파일 타임 검증)
- 코드 가독성 및 유지보수성 향상
- Repository 캐시 활용으로 성능 최적화
- DashboardRepository와 일관된 패턴 유지